--- a/index.html
+++ b/index.html
@@ -10,31 +10,9 @@
 
 <body>
     <div id="root">
-        <script>
-            //     const heading = document.createElement("h1");
-            //     heading.innerHTML = "Hello World from JavaScript";
-
-            //     const root = document.getElementById("root");
-            //     root.appendChild(heading);
-            // </script>
-
-        <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-
     </div>
 
-    <!-- <script>
-
-        const heading = React.createElement("h1", {}, "Hello World from React");
-        const root = ReactDOM.createRoot(document.getElementById("root"))
-        root.render(heading)
-
-    </script> -->
-
-    <script src="./App.js">
-
-    </script>
-
+    <script type="module" src="./src/App.js"></script>
 </body>
 
 </html>
